Append focuser to html instead of body so it doesn't effect horizontal scrolling (when styling is applied correctly)

--- a/src/styles/index.pcss
+++ b/src/styles/index.pcss
@@ -8,6 +8,11 @@
   outline: none !important;
 }
 
+body {
+  overflow-x: hidden;
+  width: 100%;
+}
+
 .form-control:focus {
   border-color: #ccc;
   box-shadow: none;
